# LogisTech

./: .gitignore  Dockerfile  README.md  START_PROJECT.bat  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sample_api.py  server.py  tasks.py  users.db
scripts/: baseline_inference.py
server/: app.py
static/: dashboard.html  index.html
static/css/: style.css
static/js/: app.js
