[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "logistech-openenv"
version = "1.0.0"
description = "LogisTech OpenEnv – Autonomous Global Supply Chain Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.2.1",
    "pymongo==4.7.2",
    "motor==3.4.0",
    "dnspython==2.6.1",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "pyjwt==2.8.0",
    "requests==2.31.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.openenv]
name        = "LogisTech-OpenEnv"
version     = "1.0.0"
spec_version = 1
runtime     = "fastapi"
app         = "server.app:app"
port        = 7860
config      = "openenv.yaml"

[tool.openenv.tasks]
ids         = ["easy", "medium", "hard"]

[tool.openenv.endpoints]
reset  = "POST /reset"
step   = "POST /step"
state  = "GET /state"
grader = "GET /grader"
health = "GET /health"

[tool.openenv.inference]
script = "inference.py"
